--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1732,107 +1732,107 @@ stories:
   domain: http://goshennews.com/
   link: https://www.goshennews.com/indiana/sports/without-labor-isu-s-key-feels-nothing-in-his-game/image_dd4ee45d-5ec2-5f7b-bc0c-df0af43e6af2.html
 images:
-- name: gears-4882162452-fa3126b38d-b-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crunch-paper.jpg
-- name: braceros-domingo-ulloa-old-church_36588495271_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-church_36588495271_o.jpg
-- name: abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
-- name: nazi-invasion-pigeons-do-not-feed-them.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-pigeons-do-not-feed-them.jpg
-- name: oldhouse-granaryfield-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
-- name: bordercrossing-bordercrossing-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-clean-view.jpg
-- name: aws-s3-canyon-canyon-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-1200.jpg
-- name: oldhousecars-house-old-cars-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dry-skin.jpg
-- name: copper-circuit-satellite-dish-pointing-upwards.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-satellite-dish-pointing-upwards.jpg
-- name: meadowbutterfly-meadow-butterfly-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gred-mash.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: copper-circuit-times-square-up-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-times-square-up-road.jpg
-- name: stories-36745180055-45289923eb-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36745180055-45289923eb-z.jpg
-- name: copper-circuit-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-public-market_36725946605_o.jpg
-- name: oldcabin-oldcabin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-rain.jpg
-- name: udnie-concert-hall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-concert-hall.jpg
-- name: oldcabin-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-rainbow-festival.jpg
-- name: braceros-domingo-ulloa-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-construction-crane-city.jpg
-- name: nazi-invasion-dark-city-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dark-city-buildings.jpg
-- name: old-granary-field-oldhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-oily-mcoilface.jpg
-- name: oldhotel-oldhotel-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-constitution.jpg
-- name: old-gas-pumps-oldgaspumps-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-- name: bluelake-post-modern-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-00-00.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-- name: school-clouds-church-clouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit.jpg
-- name: dragon-desert-desert-dragon-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dali-three.jpg
-- name: miamibeach-miamibeach-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-emily-carr.jpg
-- name: berlinwall-DSC-0084-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colorful-dream.jpg
-- name: braceros-domingo-ulloa-nyc-subway-train-125th.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-nyc-subway-train-125th.jpg
-- name: oldhouse-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
-- name: beach-rocks-beach-rocks-currents-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-aqua.jpg
-- name: bf-skinner-high-speed-train-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-high-speed-train-station.jpg
-- name: old-granary-field-granaryfield-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-color.jpg
-- name: walled-garden-walled-garden-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
-- name: border-crossing-bordercrossing-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alien-goggles.png
-- name: oldhouse-oldhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-creativity.jpg
-- name: bordercrossing-bordercrossing-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-deep-connections.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-- name: nazi-invasion-old-building-phoenix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-phoenix.jpg
-- name: rockingchair-rockingchair-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-mucha-mult.jpg
-- name: nazi-invasion-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-shipping-people-walking.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-free-woman.jpg
-- name: dragon-desert-desert-dragon-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crunch-paper.jpg
-- name: old-school-house-old-schoolhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-kandinsky-bv.jpg
-- name: gypsymosaic-gypsy-eyes-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-neo-instinct.jpg
-- name: border-crossing-bordercrossing-smooth-ride.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-smooth-ride.png
-- name: old-cabin-oldcabin-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crafty-painting.jpg
-- name: yosemite-yosemite-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
-- name: bf-skinner-white-house-close-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-close-up.jpg
+- name: abe-lincoln-one-yellow-collage-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-15-87.jpg
+- name: store-on-corner-store-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alien-goggles.jpg
+- name: beach-rocks-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: berlinwall2-berlinwall-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gred-mash.jpg
+- name: mediterranean-mediterranean-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-brush.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
+- name: nazi-invasion-full-stack-woodpile.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-full-stack-woodpile.jpg
+- name: bluelake-post-modern-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-01-17-38.jpg
+- name: downtown-los-angeles-downtown-la-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
+- name: eduardo-eduardo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+- name: downtown-los-angeles-downtown-la-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kandinsky-bv.JPG
+- name: docks-docks-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-graham-sutherland.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: nazi-invasion-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-mirrors-hotel.jpg
+- name: white-house-lawn-white-house-window-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dry-skin.jpg
+- name: la-muse-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dandelions-in-rocks.jpg
+- name: aws-s3-square-C2L6QJRUcAEVlYF.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2L6QJRUcAEVlYF.jpg
+- name: white-house-lawn-white-house-lawn-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-neo-instinct.jpg
+- name: aws-s3-square-C2L6QJRUcAEVlYF-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2L6QJRUcAEVlYF-square.jpg
+- name: bf-skinner-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-seattle-clouds.jpg
+- name: carry-load-carryload-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-really-hot.jpg
+- name: san-francisco-street-view-san-francisco-street-view-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-umberto-bocc.jpg
+- name: christianity-christianity-under-construction-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-4.jpg
+- name: stories-adam-smith-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-blue-circuit.jpg
+- name: nyc-flag-nycflag-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-monet-one.jpg
+- name: cargo-ship-cargo-ship-on-sea-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
+- name: power-lines-power-lines-empty-space-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-constitution.jpg
+- name: paris-paris-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colored-circuits.jpg
+- name: stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-yellow-collage.jpg
+- name: old-school-house-old-schoolhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-sunday.jpg
+- name: docks-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks.jpg
+- name: liberty-back-statue-liberty-back-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sunday.jpg
+- name: nazi-invasion-seattle-waterfront-ferris-wheel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-waterfront-ferris-wheel.jpg
+- name: old-door-lock-old-door-lock-2-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-hot-spicy.jpg
+- name: locked-up-steam-lock-up-steam-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-plentiful.jpg
+- name: gypsy-wagon-gypsywagon-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-bright-sand.jpg
+- name: store-on-corner-store-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-space-pizza.jpg
+- name: bf-skinner-soliders-fighting-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-soliders-fighting-statue.jpg
+- name: old-barn-old-barn-1500-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-atari-asteroids.jpg
+- name: white-house-lawn-white-house-window-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-ww2-dresden.jpg
+- name: castle-wall-DSC-0067-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-free-woman.JPG
+- name: subway-subway-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smooth-ride.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+- name: copper-circuit-dragon-desert-looking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dragon-desert-looking.jpg
+- name: oldhouse-oldhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-atari-asteroids.jpg
+- name: hollywood-building-hollywood-building-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-post-modern.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
 ---
 Fun Holiday Events At Sugarbush Resort.&nbsp;Dozens Of Homes Damaged By Wildfire In Hills Over Chile City.&nbsp;Amboy Nursing Home Will Close Its Doors.&nbsp;Iola, Ellsworth Get Incubator Grants.&nbsp;New Defense Grants May Benefit Enid Infrastructure.&nbsp;One Of The Three Diversion Dams.&nbsp;Fog Snarls Flights At Chicago's O'Hare, Midway Airports.&nbsp;One Flew Over The Cuckoos Nest Honored In Depoe Bay.&nbsp;
